[package]
authors = ["yomiko451"]
name = "ttd"
version = "0.1.0"
edition = "2021"
description = "a simple todo list manager"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
home = "0.5.9"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
